improved client; switched server to use zune instead of lune

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
 	},
 	"luau-lsp.fflags.override": {
 		"LuauSolverV2": "false"
-	}
+	},
+	"luau-lsp.types.definitionFiles": [
+		"/home/deviaze/.zune/typedefs/global/zune.d.luau"
+	]
 }
