--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,17 @@
 {
-	"code-runner.executorMap": {
-		"luau": "lune run ./src/client/main.luau"
-	},
-	"luau-lsp.fflags.override": {
-		"LuauSolverV2": "false"
-	},
-	"luau-lsp.types.definitionFiles": [
-		"/home/deviaze/.zune/typedefs/global/zune.d.luau"
-	]
+  "code-runner.executorMap": {
+    "luau": "lune run ./src/client/main.luau"
+  },
+  "luau-lsp.fflags.override": {
+    "LuauSolverV2": "false"
+  },
+  "luau-lsp.require.directoryAliases": {
+    "@zcore/": "~/.zune/typedefs/core/",
+    "@lune/": "~/.lune/.typedefs/0.8.9/"
+  },
+  "luau-lsp.types.definitionFiles": [
+    "/home/deviaze/.zune/typedefs/global/zune.d.luau"
+  ],
+  "luau-lsp.platform.type": "standard",
+  "luau-lsp.require.mode": "relativeToFile"
 }
