--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "code-runner.executorMap": {
-    "luau": "lune run ./src/client/main.luau"
+    "luau": "lune run ./src/client/client.luau"
   },
   "luau-lsp.fflags.override": {
     "LuauSolverV2": "false"
@@ -13,5 +13,4 @@
     "/home/deviaze/.zune/typedefs/global/zune.d.luau"
   ],
   "luau-lsp.platform.type": "standard",
-  "luau-lsp.require.mode": "relativeToFile"
 }
